# flix_api

./: pyproject.toml
actors/: models.py  serializer.py  urls.py  views.py
actors/migrations/: 0001_initial.py
app/: settings.py  urls.py
authentication/: urls.py
genres/: serializers.py  urls.py  views.py
genres/migrations/: 0001_initial.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_rename_movie_review_movie_alter_review_stars.py
